2009-11-09  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.cpp,
	ports/hotspot/src/share/vm/shark/sharkMemoryManager.hpp:
	New methods deallocateExceptionTable and deallocateFunctionBody
	dependent on the llvm version.
	Made deallocateMemForFunction method dependent on the llvm version.

2010-05-06  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Remove euctw patch.
	* patches/boot/icedtea-euctw.patch,
	Removed; EUCTW class no longer uses java.util.Scanner.

2009-10-22  Matthias Klose  <doko@ubuntu.com>

	* patches/no-precompiled.patch: Allow disabling of the
	precompiled header setting DISABLE_PRECOMPILED_HEADER.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.

2010-05-06  Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/icedtea-pr40616.patch:
	Extend with fix for new HKSCS.java file.

2009-01-08  Matthias Klose  <doko@ubuntu.com>

	* patches/no-precompiled.patch: Don't use
	precompiled header files in hotspot.

2009-10-28  Mark Wielaard  <mjw@redhat.com>

	* NEWS: Mention systemtap JNI class tracing support.

2010-05-06  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS:
	Add 1.13 with libjpeg7 support, OpenJDK7
	milestone 7 and the latest security updates.

2010-05-05  Andrew John Hughes  <ahughes@redhat.com>

	* patches/boot/icedtea-pr40616.patch:
	Regenerated due to change from GenerateEUC_TW
	to EUC_TW.

2009-10-22  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL:
	Update HotSpot build documentation.

2009-05-14  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL:
	Add notes on using alternate HotSpot builds.

2009-10-21  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Pick up HotSpot URL from hotspot.map.

2009-10-26 Jon VanAlten <jon.vanalten@redhat.com>

	* patches/icedtea-libraries.patch: Check for libjpeg.so.7.
	* INSTALL: Indicate newer versions of libjpeg are supported.

2009-10-19  Mark Wielaard  <mjw@redhat.com>

	* tapset/hotspot_jni.stp.in: New tapset.